@@ -8,6 +8,7 @@ Default Qt Client
 - Option to disable sound device detection notifications in statusbar events
 Android Client
 - Fixed bug where join and leave events were not announced when focused on another channel
+- Changed client name display format from "<ClientName> version <Version>" to "<ClientName> <Version>"
 - Join last channel checkbox is now disabled by default in Server Properties Dialog
 iOS Client
 -
